--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
     needs: linting
     strategy:
       matrix:
-        python-version: [3.9, 3.1]
+        python-version: ['3.9', '3.10']
         # REQUIRED OPERATING SYSTEMS
         os: [ubuntu-latest, macos-latest, windows-latest]
         
@@ -58,7 +58,7 @@ jobs:
     needs: test
     strategy:
       matrix:
-        python-version: [3.9, 3.1]
+        python-version: ['3.9', '3.10']
         # REQUIRED OPERATING SYSTEMS
         os: [ubuntu-latest, macos-latest, windows-latest] 
 
